# template-opengl-cmake

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/glfw-3.4/: CMakeLists.txt
src/: main.cpp
